--- a/app/src/main/res/layout/fragment_contactus.xml
+++ b/app/src/main/res/layout/fragment_contactus.xml
@@ -11,14 +11,14 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="96dp"
-        android:gravity="center|left"
+        android:gravity="center"
         android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/img_back"
             android:layout_width="33dp"
             android:layout_height="33dp"
-            android:layout_gravity="center|start"
+            android:layout_gravity="center|start|left"
             android:layout_marginStart="16dp"
             android:layout_marginTop="38dp"
             android:layout_marginBottom="32dp"
@@ -27,13 +27,14 @@
 
         <TextView
             android:id="@+id/titleFragment"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|center"
-            android:layout_marginLeft="120dp"
-            android:layout_marginBottom="8dp"
+            android:layout_marginRight="48dp"
+            android:layout_marginBottom="12dp"
             android:fontFamily="@font/poppins_medium"
-            android:text="@string/title_flights"
+            android:text="Contact Us"
+            android:textAlignment="center"
             android:textColor="@color/white"
             android:textSize="20sp" />
 
