--- a/app/src/main/res/layout/fragment_booking.xml
+++ b/app/src/main/res/layout/fragment_booking.xml
@@ -77,13 +77,13 @@
                     android:visibility="gone"></ImageButton>
             </LinearLayout>
             <TextView
+                android:id="@+id/location_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="30dp"
                 android:textColor="@color/white"
                 android:gravity="center"
-                android:textSize="40sp"
-                android:text="Phú Quốc">
+                android:textSize="40sp">
             </TextView>
             <TextView
                 android:layout_width="match_parent"
