--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -44,11 +44,19 @@
                 android:layout_height="match_parent">
 
                 <androidx.constraintlayout.widget.ConstraintLayout
-                    android:id="@+id/historiesContainer"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@color/white"
-                    android:padding="4dp"></androidx.constraintlayout.widget.ConstraintLayout>
+                    android:padding="4dp">
+
+                    <LinearLayout
+                        android:id="@+id/historiesContainer"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="vertical"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"></LinearLayout>
+                </androidx.constraintlayout.widget.ConstraintLayout>
             </ScrollView>
 
         </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
