--- a/app/src/main/res/layout/fragment_home_screen.xml
+++ b/app/src/main/res/layout/fragment_home_screen.xml
@@ -5,196 +5,193 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background_color_top">
-
-    <LinearLayout
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/swiperefresh"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-        <LinearLayout
-            android:id="@+id/nav_bar"
+        android:layout_height="match_parent">
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="85dp"
-            android:layout_marginStart="20dp"
-            android:layout_marginEnd="20dp"
-            android:orientation="horizontal">
-            <androidx.cardview.widget.CardView
-                android:id="@+id/avatar"
-                android:layout_width="45dp"
-                android:layout_height="45dp"
-                app:cardCornerRadius="200dp"
-                android:layout_gravity="center">
-                <ImageView
-                    android:id="@+id/avatar_image"
-                    android:layout_width="45dp"
-                    android:layout_height="match_parent"
-                    android:src="@drawable/avatar"
-                    android:scaleType="centerCrop">
-                </ImageView>
-            </androidx.cardview.widget.CardView>
-
-            <View
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="2"/>
-            <TextView
-                android:id="@+id/title"
-                android:layout_width="150dp"
-                android:layout_height="match_parent"
-                android:gravity="center"
-                android:textSize="25sp"
-                android:text="@string/app_name">
-            </TextView>
-
-            <View
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="2" />
-
-            <com.google.android.material.floatingactionbutton.FloatingActionButton
-                android:id="@+id/fab"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:backgroundTint="@color/white"
-                android:contentDescription="@string/title_home"
-                android:src="@drawable/ic_notifications_black_24dp"
-                android:visibility="invisible"
-                app:fabCustomSize="45dp" />
-        </LinearLayout>
-
-        <Spinner
-            android:id="@+id/location"
-            android:layout_width="match_parent"
-            android:layout_height="56dp"
-            android:background="@drawable/rounded_edit_text"
-            android:backgroundTint="@color/white"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"
-            android:layout_marginStart="20dp"
-            android:layout_marginEnd="20dp"
-            android:drawableStart="@drawable/baseline_search_24"
-            android:drawableEnd="@drawable/ic_notifications_black_24dp"
-            android:drawablePadding="20dp"
-            android:paddingStart="20dp"
-            android:paddingEnd="20dp"
-            android:layout_gravity="center"
-            android:hint="Location" />
-
-        <EditText
-            android:id="@+id/datePickerHolder"
-            android:layout_width="match_parent"
-            android:layout_height="56dp"
-            android:background="@drawable/rounded_edit_text"
-            android:backgroundTint="@color/white"
-            android:layout_marginBottom="10dp"
-            android:layout_marginStart="20dp"
-            android:layout_marginEnd="20dp"
-            android:drawableStart="@drawable/baseline_calendar_today_24"
-            android:drawablePadding="20dp"
-            android:paddingStart="20dp"
-            android:paddingEnd="20dp"
-            android:layout_gravity="center"
-            android:hint="July 08 - July 15">
-        </EditText>
-
-        <DatePicker
-            android:id="@+id/datePicker"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
-            android:layout_marginStart="20dp"
-            android:layout_marginEnd="20dp"
-            android:calendarViewShown="false"
-            android:spinnersShown="true"
-            android:visibility="gone" />
-
-        <Button
-            android:id="@+id/search_button"
-            android:layout_width="160dp"
-            android:layout_height="56dp"
-            android:layout_gravity="center"
-            android:layout_marginBottom="15dp"
-            android:background="@drawable/background_btn_blue"
-            android:paddingStart="30dp"
-            android:paddingTop="10dp"
-            android:paddingEnd="30dp"
-            android:paddingBottom="10dp"
-            android:text="Search"
-            android:textColor="#FFFFFF"></Button>
-
-        <androidx.cardview.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_margin="20dp"
-            android:layout_weight="1"
-            android:background="@color/background_color_bottom"
-            app:cardCornerRadius="30dp">
+            android:layout_height="match_parent" >
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:orientation="vertical">
 
-                <androidx.cardview.widget.CardView
+                <LinearLayout
+                    android:id="@+id/nav_bar"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="85dp"
                     android:layout_marginStart="20dp"
-                    android:layout_marginTop="20dp"
                     android:layout_marginEnd="20dp"
-                    android:layout_marginBottom="-20dp"
-                    android:background="@color/background_color_bottom"
-                    app:cardCornerRadius="30dp">
+                    android:orientation="horizontal">
 
-                    <ImageView
-                        android:id="@+id/imageView"
-                        android:layout_width="match_parent"
-                        android:layout_height="200dp"
-                        android:contentDescription="@string/app_name"
-                        android:scaleType="centerCrop"
-                        android:src="@drawable/bottom_image" />
+                    <androidx.cardview.widget.CardView
+                        android:id="@+id/avatar"
+                        android:layout_width="45dp"
+                        android:layout_height="45dp"
+                        android:layout_gravity="center"
+                        app:cardCornerRadius="200dp">
 
-                </androidx.cardview.widget.CardView>
+                        <ImageView
+                            android:id="@+id/avatar_image"
+                            android:layout_width="45dp"
+                            android:layout_height="match_parent"
+                            android:scaleType="centerCrop"
+                            android:src="@drawable/avatar_placeholder">
 
-                <TextView
+                        </ImageView>
+                    </androidx.cardview.widget.CardView>
+
+                    <View
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="2" />
+
+                    <TextView
+                        android:id="@+id/title"
+                        android:layout_width="150dp"
+                        android:layout_height="match_parent"
+                        android:gravity="center"
+                        android:text="@string/app_name"
+                        android:textSize="26dp"></TextView>
+
+                    <View
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="2" />
+
+                    <com.google.android.material.floatingactionbutton.FloatingActionButton
+                        android:id="@+id/fab"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:backgroundTint="@color/white"
+                        android:contentDescription="@string/title_home"
+                        android:src="@drawable/ic_notifications_black_24dp"
+                        android:visibility="invisible"
+                        app:fabCustomSize="45dp" />
+                </LinearLayout>
+
+                <Spinner
+                    android:id="@+id/location"
                     android:layout_width="match_parent"
-                    android:layout_height="20dp"
-                    android:layout_marginStart="20dp"
-                    android:layout_marginTop="40dp"
-                    android:layout_marginEnd="20dp"
-                    android:text="DETAILS"
-                    android:textColor="@color/black"></TextView>
-
-                <TextView
-                    android:id="@+id/location_desc"
-                    android:layout_width="match_parent"
-                    android:layout_height="60dp"
+                    android:layout_height="56dp"
+                    android:layout_gravity="center"
                     android:layout_marginStart="20dp"
                     android:layout_marginTop="10dp"
                     android:layout_marginEnd="20dp"
-                    android:text="@string/description"></TextView>
+                    android:layout_marginBottom="10dp"
+                    android:background="@drawable/rounded_edit_text"
+                    android:backgroundTint="@color/white"
+                    android:drawableStart="@drawable/baseline_search_24"
+                    android:drawableEnd="@drawable/ic_notifications_black_24dp"
+                    android:drawablePadding="20dp"
+                    android:hint="Location"
+                    android:paddingStart="20dp"
+                    android:paddingEnd="20dp" />
+
+                <EditText
+                    android:id="@+id/datePickerHolder"
+                    android:layout_width="match_parent"
+                    android:layout_height="56dp"
+                    android:layout_gravity="center"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginEnd="20dp"
+                    android:layout_marginBottom="10dp"
+                    android:background="@drawable/rounded_edit_text"
+                    android:backgroundTint="@color/white"
+                    android:drawableStart="@drawable/baseline_calendar_today_24"
+                    android:drawablePadding="20dp"
+                    android:hint="July 08 - July 15"
+                    android:paddingStart="20dp"
+                    android:paddingEnd="20dp"></EditText>
+
+                <DatePicker
+                    android:id="@+id/datePicker"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginEnd="20dp"
+                    android:layout_marginBottom="10dp"
+                    android:calendarViewShown="false"
+                    android:spinnersShown="true"
+                    android:visibility="gone" />
+
+                <Button
+                    android:id="@+id/search_button"
+                    android:layout_width="160dp"
+                    android:layout_height="56dp"
+                    android:layout_gravity="center"
+                    android:layout_marginBottom="15dp"
+                    android:background="@drawable/background_btn_blue"
+                    android:paddingStart="30dp"
+                    android:paddingTop="10dp"
+                    android:paddingEnd="30dp"
+                    android:paddingBottom="10dp"
+                    android:text="Search"
+                    android:textColor="#FFFFFF"></Button>
+
+                <androidx.cardview.widget.CardView
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_margin="20dp"
+                    android:layout_weight="1"
+                    android:background="@color/background_color_bottom"
+                    app:cardCornerRadius="30dp">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="vertical">
+
+                        <androidx.cardview.widget.CardView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="20dp"
+                            android:layout_marginTop="20dp"
+                            android:layout_marginEnd="20dp"
+                            android:layout_marginBottom="-20dp"
+                            android:background="@color/background_color_bottom"
+                            app:cardCornerRadius="30dp">
+
+                            <ImageView
+                                android:id="@+id/imageView"
+                                android:layout_width="match_parent"
+                                android:layout_height="200dp"
+                                android:contentDescription="@string/app_name"
+                                android:scaleType="centerCrop"
+                                android:src="@drawable/bottom_image" />
+
+                        </androidx.cardview.widget.CardView>
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="20dp"
+                            android:layout_marginStart="20dp"
+                            android:layout_marginTop="40dp"
+                            android:layout_marginEnd="20dp"
+                            android:text="DETAILS"
+                            android:textColor="@color/black"></TextView>
+
+                        <TextView
+                            android:id="@+id/location_desc"
+                            android:layout_width="match_parent"
+                            android:layout_height="60dp"
+                            android:layout_marginStart="20dp"
+                            android:layout_marginTop="10dp"
+                            android:layout_marginEnd="20dp"
+                            android:text="@string/description"></TextView>
+
+
+                    </LinearLayout>
+
+
+                </androidx.cardview.widget.CardView>
 
 
             </LinearLayout>
-
-
-        </androidx.cardview.widget.CardView>
-
-
-
-    </LinearLayout>
-
-
-    <!--    <TextView-->
-    <!--        android:id="@+id/text_home"-->
-    <!--        android:layout_width="match_parent"-->
-    <!--        android:layout_height="wrap_content"-->
-    <!--        android:layout_marginStart="8dp"-->
-    <!--        android:layout_marginTop="8dp"-->
-    <!--        android:layout_marginEnd="8dp"-->
-    <!--        android:textAlignment="center"-->
-    <!--        android:textSize="20sp"-->
-    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
-    <!--        app:layout_constraintEnd_toEndOf="parent"-->
-    <!--        app:layout_constraintStart_toStartOf="parent"-->
-    <!--        app:layout_constraintTop_toTopOf="parent" />-->
+        </ScrollView>
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 </RelativeLayout>
