--- a/app/src/main/res/layout/welcome_screen.xml
+++ b/app/src/main/res/layout/welcome_screen.xml
@@ -24,18 +24,18 @@
         android:id="@+id/btnGetstarted"
         android:layout_width="0dp"
         android:layout_height="45dp"
-        android:text="Get Started"
-        app:layout_constraintTop_toBottomOf="@id/textView"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginStart="5dp"
-        android:layout_marginEnd="5dp"
+        android:layout_marginStart="30dp"
         android:layout_marginTop="40dp"
+        android:layout_marginEnd="30dp"
         android:background="@drawable/login_btn"
-        android:textColor="@color/white"
         android:fontFamily="@font/salsa"
+        android:text="Get Started"
         android:textAllCaps="false"
-        android:textSize="30dp"/>
+        android:textColor="@color/white"
+        android:textSize="30dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/textView" />
     <!-- TextView -->
     <TextView
         android:id="@+id/textView"
