--- a/app/src/main/res/layout/fragment_booking.xml
+++ b/app/src/main/res/layout/fragment_booking.xml
@@ -266,7 +266,9 @@
                             android:id="@+id/text_view_flipper"
 
                             android:layout_width="match_parent"
-                            android:layout_height="95dp"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="24dp"
+                            android:layout_marginEnd="24dp"
                             android:autoStart="true"
                             android:flipInterval="5000"
                             android:inAnimation="@android:anim/slide_in_left"
