--- a/app/src/main/res/layout/fragment_home_screen.xml
+++ b/app/src/main/res/layout/fragment_home_screen.xml
@@ -43,23 +43,14 @@
                         </ImageView>
                     </androidx.cardview.widget.CardView>
 
-                    <View
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight="2" />
-
                     <TextView
                         android:id="@+id/title"
-                        android:layout_width="150dp"
+                        android:layout_width="fill_parent"
                         android:layout_height="match_parent"
+                        android:layout_weight="1"
                         android:gravity="center"
                         android:text="@string/app_name"
-                        android:textSize="26dp"></TextView>
-
-                    <View
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight="2" />
+                        android:textSize="24dp"></TextView>
 
                     <com.google.android.material.floatingactionbutton.FloatingActionButton
                         android:id="@+id/fab"
@@ -178,10 +169,11 @@
                         <TextView
                             android:id="@+id/location_desc"
                             android:layout_width="match_parent"
-                            android:layout_height="60dp"
+                            android:layout_height="wrap_content"
                             android:layout_marginStart="20dp"
                             android:layout_marginTop="10dp"
                             android:layout_marginEnd="20dp"
+                            android:layout_marginBottom="10dp"
                             android:text="@string/description"></TextView>
 
 
